<resources>
    <string name="app_name">Walking School Bus</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="Search_address">Enter Address</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="already_registered_login_me">Already registered? Login Me.</string>
    <string name="enter_email">Enter Email</string>
    <string name="apiKey">E14DEF58-61CB-4425-B6FB-BDBD807E44CF</string>
    <string name="server_url">https://cmpt276-1177-bf.cmpt.sfu.ca:8443</string>
    <string name="group">Group</string>
    <string name="logout">Logout</string>
    <string name="googleMapKey">AIzaSyBZxUhMFPP_iuPlMcpbgPmm1nEeS4NOSKI</string>
    <string name="groupDescription">groupDescription</string>
    <string name="StartingPoint">Meeting Point</string>
    <string name="Destination">Destination</string>
    <string name="groupFrag_intro">click to see details</string>
    <string name="members">members</string>
    <string name="ID">ID</string>
    <string name="enterID">enterID</string>
    <string name="map">map</string>
    <string name="leaderCol">Leader:</string>
    <string name="membersCol">members:</string>
    <string name="name">Name</string>
    <string name="monitor">Monitor</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="info">Info</string>
    <string name="joinMe">Join Me</string>
    <string name="joinChild">Join Child</string>
    <string name="RemoveMe">Remove Me</string>
    <string name="RemoveChild">Remove Child</string>


    <string name="title_activity_parent">ParentActivity</string>
    <string name="add">add</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="press_ok_to_delete">press ok to delete</string>
    <string name="delete">Delete</string>
    <string name="title_activity_child">ChildActivity</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
    <string name="when_s_your_birthday">When\'s your birthday?</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="next">continue</string>
    <string name="skip_this_section_for_now">Skip this section for now</string>
    <string name="contract_information">Contract Information</string>
    <string name="cellphone">CELLPHONE</string>
    <string name="home">HOME</string>
    <string name="address">ADDRESS</string>
    <string name="teacher_s_name">TEACHER\'S NAME</string>
    <string name="grade">GRADE</string>
    <string name="emergency_contact_message">EMERGENCY CONTACT MESSAGE</string>
    <string name="plusOne">+1</string>
    <string name="add_your_number">Add your number</string>
    <string name="title_activity_message">Message</string>
    <string name="title_activity_unread_message">UnreadMessageActivity</string>
    <string name="message">Message</string>
    <string name="title_activity_message_home">MessageHomeActivity</string>
    <string name="title_activity_read_message">readMessageActivity</string>
    <string name="adit_group_info">Input all of the latitude and longitude section.</string>
    <string name="adit_group_info_2">Or it is not going to store latitude and longitude</string>
    <string name="address_no_information">Address: No information</string>
    <string name="home_phone_no_information">Home Phone: No information</string>
    <string name="title_activity_reading_request">ReadingRequestActivity</string>

</resources>
