<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="walkingschoolbus.cmpt276.ca.appUI.BirthdayActivity">

    <TextView
        android:id="@+id/ContactActivity_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:text="@string/when_s_your_birthday"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#4daf57"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/BirthdayActivity_birthdayEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ContactActivity_question"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/birthday"
        android:inputType="textPersonName"
        android:lineSpacingExtra="14sp"
        android:textColorLink="#4daf57"
        android:textSize="14sp" />

    <Button
        android:id="@+id/BirthdayActivity_continueBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="118dp"
        android:background="@drawable/button_border"
        android:elevation="0dp"
        android:text="@string/next"
        android:textColor="#595959" />

    <TextView
        android:id="@+id/BirthdayActivity_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/BirthdayActivity_continueBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/BirthdayActivity_continueBtn"
        android:layout_marginBottom="57dp"
        android:text="@string/skip_this_section_for_now"
        android:textSize="12sp" />
</RelativeLayout>
