<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="walkingschoolbus.cmpt276.ca.appUI.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#FFEB3B">

        <TextView
            android:id="@+id/ProfileActivity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:text="@string/name" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/ProfileActivity_cardView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:orientation="horizontal">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ID"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/ProfileAcitivty_userID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enterID"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ProfileActivity_monitor"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monitor"
                    android:textSize="15sp"
                    android:drawableBottom="@drawable/ic_people" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ProfileActivity_Group"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group"
                    android:textSize="15sp"
                    android:drawableBottom="@drawable/ic_people" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/ProfileActivity_email"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ProfileActivity_cardView"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        android:textSize="15sp"
        android:drawableLeft="@drawable/ic_black_email"/>
</RelativeLayout>
