<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/GroupLayout_groupDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="15dp"
        android:text="@string/groupDescription"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/GroupLayout_startingPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/GroupLayout_groupDescription"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_toEndOf="@+id/GroupLayout_groupDescription"
        android:layout_toRightOf="@+id/GroupLayout_groupDescription"
        android:text="@string/StartingPoint" />

    <TextView
        android:id="@+id/GroupLayout_Destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GroupLayout_startingPosition"
        android:layout_alignStart="@+id/GroupLayout_startingPosition"
        android:layout_below="@+id/GroupLayout_groupDescription"
        android:text="@string/Destination" />


</RelativeLayout>